--- a/TypeCheckerGenerator/latex/SpecParser.tex
+++ b/TypeCheckerGenerator/latex/SpecParser.tex
@@ -172,7 +172,7 @@
 
 Since we have modelled typing rules, β-rules and η-rules explicitly in our
 software, parsing the DSL becomes a reasonably straightforward process. We
-use our combinators to build parsers for patterns, expressions, premises and
+use our combinators to build parsers for patterns, expressions, premises, and
 premise chains before assembling these to parse type rules, elimination rules
 and other such rules we will require before finally combining these to parse the
 overall description of a type. Parsing a specification file is then a matter
