--- a/TypeCheckerGenerator/latex/TypeChecker.tex
+++ b/TypeCheckerGenerator/latex/TypeChecker.tex
@@ -352,7 +352,7 @@ these functions fail with a descriptive error.
 We define a notion of term equivalence that we will need later
 to check the type of computations embedded in constructions. This is a
 purely syntactic action. If terms are to have their normal forms compared
-then they must be normalized before checking their equivalence here.
+then they must be normalised before checking their equivalence here.
 
 \begin{code}%
 \>[0]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}≡v\AgdaUnderscore{}}}\AgdaSpace{}%
@@ -587,7 +587,7 @@ then they must be normalized before checking their equivalence here.
 The high-level functionality of our type checker is given by two functions,
 check and infer. We check the type of constructions and infer the type of
 computations, however since we can embed computations in constructions using
-$thunk$ we may accept a call to check the type of any term.
+a thunk, we may accept a call to check the type of any term.
 
 When checking constructions, we make a distinction between two cases,
 either we duck under a thunk to check the computation beneath it, or we
@@ -1021,7 +1021,7 @@ variables before we delegate to $check$.
 Checking a whole chain of premise proceeds as one might expect; each premise is
 checked in order. The environments for the things we trust accumulate while the
 environments for the things that remain to be trusted are whittled away. If the
-premise chain is empty, we simply return what it is that we already trust.
+premise chain is empty, we simply return what we already trust.
 
 In direct correspondence to our initial three functions that check the
 various user-defined rules, we provide three more, one for running each
@@ -1031,7 +1031,7 @@ rule is indeed a type.
 
 We give two examples here, that of running a $∋$ rule and that of running
 an elimination rule. The first merely tries to succeed, the second must
-return the synthesized type.
+return the synthesised type.
 
 We do not request environments for the exact patterns in a rule, but instead
 for their opening into the current scope. Similarly, when we retrieve the
@@ -1222,7 +1222,7 @@ empty scope while allowing them to be applied in any scope.
 \AgdaBound{elim-ty}\<%
 \end{code}
 Our type checking process is a highly mutually recursive process by nature. We can
-leverage Agda's termination checker to give us feedback which we might use to
+leverage Agda's termination checker to give us feedback that we might use to
 guarantee that the process terminates. We are unable to guarantee termination
 in this case as we do not impose the required restrictions on user-supplied rules. If
 a user supplies a rule containing a circular check, then the type checking
