Add implementation overview.

--- a/report/GrantFleming-4thYearProject-Report.tex
+++ b/report/GrantFleming-4thYearProject-Report.tex
@@ -13,12 +13,14 @@
 \secondmarker{Dr Clemens Kupke}
 
 \begin{document}
+        \pagenumbering{gobble}
         \maketitle
         \input{chapters/Abstract.tex}
-	\tableofcontents
-        \addtocontents{toc}{\protect\thispagestyle{empty}}
-        
+	{\tableofcontents}
+
+        \setcounter{page}{0}
         \part{Background \& Literature Review}
+        \pagenumbering{arabic}
 	\input{chapters/WhatIsATypeSystem.tex}
         \input{chapters/TypeTheoryOverview.tex}        
 	\input{chapters/RelevantRelatedWork.tex}
