Fix latex compile following directory change.

--- a/report/appendices.tex
+++ b/report/appendices.tex
@@ -499,16 +499,16 @@ squarebracketed p = do
 \label{appendix-tests}
 
 \subsection{Description of STLC}
-\input{../../TypeCheckerGenerator/latex/Test/Specs/STLC.tex}
+\input{../../src/latex/Test/Specs/STLC.tex}
 
 \subsection{Beta reduction and normalisation}
-\input{../../TypeCheckerGenerator/latex/Test/BetaTest.tex}
+\input{../../src/latex/Test/BetaTest.tex}
 
 \subsection{Eta expansion}
-\input{../../TypeCheckerGenerator/latex/Test/EtaTest.tex}
+\input{../../src/latex/Test/EtaTest.tex}
 
 \subsection{Type checking STLC}
-\input{../../TypeCheckerGenerator/latex/Test/STLCTest.tex}
+\input{../../src/latex/Test/STLCTest.tex}
 \clearpage
 \section{Lattice meet/join algorithms}
 \label{appendix-joinalgorithms}
