--- a/src/latex/Substitution.tex
+++ b/src/latex/Substitution.tex
@@ -138,7 +138,7 @@ substitutions.
 Finally, we acknowledge that given two scope transformations, we can define
 a type to represent composition, which leads us nicely to a definition for
 composition of substitutions.
-\input{../../TypeCheckerGenerator/latex/Composition.tex}
+\input{../../src/latex/Composition.tex}
 \begin{code}%
 \>[0]\AgdaOperator{\AgdaFunction{[\AgdaUnderscore{}]\AgdaUnderscore{}∘σ\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
